Added: RabbitMQ to send confirmation email after registration

--- a/E_Insurance_App/E_Insurance_App/appsettings.json
+++ b/E_Insurance_App/E_Insurance_App/appsettings.json
@@ -15,5 +15,17 @@
     "Audience": "E-Insurance-Users",
     "ExpiryInMinutes": 60
   },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "basudhondip@gmail.com",
+    "SenderPassword": "bddxckimdwaayhtm"
+  },
   "AllowedHosts": "*"
 }
